@@ -3,3 +3,4 @@
 debian/bash_completion/apache2-common	/etc/bash_completion.d/
 debian/icons/*.png			/usr/share/apache2/icons
 /usr/sbin/envvars-std           	/usr/share/apache2/build
+debian/index.html			/usr/share/apache2/default-site/
