@@ -1,1 +1,0 @@
-/usr/sbin/suexec-__TYPE__	/usr/lib/apache2/
