@@ -7,10 +7,9 @@ usr/lib/cgi-bin
 usr/share/apache2
 usr/share/apache2/build
 usr/share/apache2/default-site
-usr/share/bug/apache2.2-common
 usr/share/lintian/overrides
 var/cache/apache2
 var/cache/apache2/mod_disk_cache
 var/log/apache2
 var/www
-usr/share/bug/apache2/script
+usr/share/bug/apache2
