@@ -1,1 +1,1 @@
-usr/share/bug/apache2.2-common/script usr/share/bug/apache2/script
+usr/share/bug/apache2-common/script	/usr/share/bug/apache2/script
