@@ -1,28 +1,14 @@
-debian/apache2-mpm-worker.postinst
-debian/apache2-mpm-worker.preinst
-debian/apache2-mpm-worker.prerm
-debian/apache2-mpm-worker.lintian-overrides
-debian/apache2-mpm-worker.dirs
-debian/apache2-mpm-worker.links
-debian/apache2-mpm-event.postinst
-debian/apache2-mpm-event.preinst
-debian/apache2-mpm-event.prerm
-debian/apache2-mpm-event.lintian-overrides
-debian/apache2-mpm-event.dirs
-debian/apache2-mpm-event.links
-debian/apache2-mpm-prefork.postinst
-debian/apache2-mpm-prefork.preinst
-debian/apache2-mpm-prefork.prerm
-debian/apache2-mpm-prefork.lintian-overrides
-debian/apache2-mpm-prefork.dirs
-debian/apache2-mpm-prefork.links
-debian/apache2-mpm-itk.postinst
-debian/apache2-mpm-itk.preinst
-debian/apache2-mpm-itk.prerm
-debian/apache2-mpm-itk.lintian-overrides
-debian/apache2-mpm-itk.dirs
-debian/apache2-mpm-itk.links
-debian/apache2-prefork-dev.postinst
-debian/apache2-threaded-dev.postinst
-debian/tmp-worker
-debian/tmp-prefork
+debian/apache2-suexec-custom.postinst
+debian/apache2-suexec-custom.preinst
+debian/apache2-suexec-custom.prerm
+debian/apache2-suexec-custom.links
+debian/apache2-suexec-custom.dirs
+debian/apache2-suexec-custom.lintian-overrides
+debian/apache2-suexec-pristine.postinst
+debian/apache2-suexec-pristine.preinst
+debian/apache2-suexec-pristine.prerm
+debian/apache2-suexec-pristine.links
+debian/apache2-suexec-pristine.dirs
+debian/apache2-suexec-pristine.lintian-overrides
+support/suexec-custom.c
+config.nice
