@@ -32,8 +32,9 @@ apache2 (2.3.16-beta-1) UNRELEASED; urgency=low
     update-alternatives(9) mechanism.
     This change is transparent to users at runtime and does not need any
     configuration changes.
+  * Remove obsolete README.source file.
 
- -- Arno Töll <debian@toell.net>  Tue, 17 Jan 2012 02:58:05 +0100
+ -- Arno Töll <debian@toell.net>  Fri, 20 Jan 2012 15:45:01 +0100
 
 apache2 (2.2.21-6) UNRELEASED; urgency=low
 
